# mastodon-api-compatibility

./: Cargo.toml  README.md  book.toml  go.mod  hugo.toml
.github/workflows/: build.yaml  hugo.yaml
assets/css/: theme-dark.css  theme-light.css  theme.css
content/: README.md  SUMMARY.md  _index.md  contributing.md  versioning.md
content/api-entities/: _content.gotmpl  _index.md
content/api-methods/: _content.gotmpl  _index.md
css/: custom.css
data/: accounts.toml  api.toml  apps.toml  domain_blocks.toml  emails.toml  endorsements.toml  filters.toml  instance.toml  notifications.toml  oauth.toml  oembed.toml  profile.toml  reports.toml  search.toml  software.toml  statuses.toml  suggestions.toml  timelines.toml
data/accounts/: blocks.toml  bookmarks.toml  favourites.toml  featured_tags.toml  filters.toml  follow_requests.toml  followed_tags.toml  mutes.toml  preferences.toml  reports.toml  suggestions.toml  tags.toml
data/admin/: accounts.toml  canonical_email_blocks.toml  dimensions.toml  domain_allows.toml  domain_blocks.toml  email_domain_blocks.toml  ip_blocks.toml  measures.toml  reports.toml  retention.toml  trends.toml
data/apps/: oauth.toml
data/instance/: announcements.toml  custom_emojis.toml  directory.toml  trends.toml
data/notifications/: grouped.toml  push.toml
data/statuses/: media.toml  polls.toml  scheduled_statuses.toml
data/timelines/: conversations.toml  lists.toml  markers.toml  streaming.toml
layouts/partials/: version-table.html  (+2 more)
src/: main.rs  parse.rs
templates/: apis.md  entity.md  software-table.md  version-table.md
(+5 files in other folders)
