[package]
name = "mastodon-api-compatibility"
version = "0.1.0"
edition = "2021"

[dependencies]
mdbook = { version = "0.4.40" }
serde = { version = "1.0.214", features = ["derive"] }
tera = "1.20.0"
toml = { version = "=0.5.11", features = ["preserve_order"] }
anyhow = "1.0.91"
indexmap = { version = "2.6.0", features = ["serde"] }
